--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-scroll": "^2.1.13",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
