--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-birth-datepicker": "^0.2.8",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-scroll": "^2.1.13",
