--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-birth-datepicker": "^0.2.8",
+    "vue-owl-carousel": "^2.0.3",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-scroll": "^2.1.13",
