--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-scroll": "^2.1.13",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
